<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_login"
            android:layout_marginVertical="@dimen/_40sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/btn_kakao_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:background="@drawable/frame_button_kakao_login"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:elevation="@dimen/_1sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_kakao"
                app:backgroundTint="@color/kakao_icon_color"
                android:layout_marginRight="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_with_kakao"
                android:textColor="@color/kakao_text_color"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:textColor="@color/grey"
            android:layout_gravity="center"
            android:textSize="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>