<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:src="@drawable/ic_notice"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="@dimen/_8sdp"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/Theme.AppCompat.TextView.gSans.Black.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_message"
            android:textSize="@dimen/_14sdp"
            android:layout_gravity="center"/>

    </LinearLayout>

        <TextView
            style="@style/Theme.AppCompat.TextView.gSans.Black.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/comfirm_message_2"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:textSize="@dimen/_12sdp"
            android:lineHeight="@dimen/_20sdp"/>

        <TextView
            android:id="@+id/textview_my_money"
            style="@style/Theme.AppCompat.TextView.gSans.Black.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="현재 포인트 : "
            android:layout_marginHorizontal="@dimen/_34sdp"
            android:textSize="@dimen/_12sdp"
            android:lineHeight="@dimen/_20sdp"/>

        <TextView
            android:id="@+id/textview_total_price"
            style="@style/Theme.AppCompat.TextView.gSans.Black.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="결재 금액 : "
            android:layout_marginHorizontal="@dimen/_34sdp"
            android:textSize="@dimen/_12sdp"
            android:lineHeight="@dimen/_20sdp"/>

        <LinearLayout
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/frame_button_reservation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="@dimen/_12sdp"
            android:gravity="center"
            android:elevation="2dp"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/Theme.AppCompat.TextView.gSans.White.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/do_reserve" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>